src/assets/styles/pages/_activities.scss
// -----------------------------------------------------------------------------
// This file contains styles that are specific to the activities page.
//
.no-js .activities #activities {
    display: none;
}

.no-js .robot-activities #robot-activities {
    display: none;
}

.activity,
.robot-activity {
    .header figure {
        margin-block-end: var(--space-md);
        margin-inline-start: calc(-1 * var(--space-md));
        width: calc(100% + 2 * var(--space-md));
    }

    .book {
        align-items: center;
        display: flex;
        margin-block-start: var(--space-lg);
    }

    .book img[role="decoration"] {
        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
        width: 50%;
    }

    .book .book__meta {
        padding-inline-start: var(--space-md);
    }

    .book__title {
        font-size: calc(24 / 16 * 1rem);
        font-weight: var(--font-weight-semibold);
    }

    .book__author {
        margin-block-start: var(--space-sm);
    }

    .header .tags {
        margin-block-start: var(--space-sm);
    }

    .header .tag {
        align-items: center;
        background-color: var(--color-cream-95);
        border-radius: var(--radius-xxs);
        color: var(--color-black-05);
        display: inline-flex;
        height: calc(38 / 16 * 1rem);
        margin-block: var(--space-xs);
        padding-inline: var(--space-sm);
    }
}

.wrapper.has-sidebar {
    padding: 0;

    .prose {
        padding-block: var(--space-xl);
        padding-inline: var(--space-md);
    }
}

.related-activities .grid {
    margin-block-start: var(--space-lg);
}

@media (min-width: 960px) {
    .activity .header,
    .robot-activity .header {
        border-bottom: var(--border-thin) solid var(--color-white);

        figure {
            margin-block-end: 0;
            margin-inline-start: 0;
        }
    }

    .activity .header .wrapper,
    .robot-activity .header .wrapper,
    .robot-activities .header .wrapper {
        display: flex;
        padding: 0;

        figure {
            img {
                height: auto;
                width: 100%;
            }

            max-width: 33rem;
            width: 100%;
        }

        div {
            display: flex;
            flex-direction: column;
            justify-content: flex-end;
            padding: 0 var(--space-xl) var(--space-lg);
            width: 100%;
        }
    }

    .activity .header .wrapper div,
    .robot-activity .header .wrapper div {
        border-left: var(--border-thin) solid var(--color-white);
    }

    .activity .wrapper.has-sidebar,
    .robot-activity .wrapper.has-sidebar {
        display: flex;
        padding-inline: 0;
    }

    .activity .sidebar,
    .robot-activity .sidebar {
        max-width: 33rem;
        width: 100%;
    }

    .activity .prose,
    .robot-activity .prose {
        padding-inline: var(--space-xl);
        width: 100%;
    }
}

